[gd_scene format=3 uid="uid://01j64legloym"]

[ext_resource type="Script" uid="uid://bv6c03akxvqkq" path="res://scenes/start_screen.gd" id="1_tx5wa"]
[ext_resource type="FontFile" uid="uid://ei2hw6wguu0h" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_he1sj"]
[ext_resource type="Texture2D" uid="uid://br06uxgljke0x" path="res://Screens/Start.png" id="2_o7i0r"]
[ext_resource type="FontFile" uid="uid://dyorkfbk7hvmp" path="res://assets/fonts/PixelOperator8.ttf" id="3_r2jwc"]

[sub_resource type="Gradient" id="Gradient_he1sj"]
colors = PackedColorArray(0.1882353, 0.31764707, 0.50980395, 1, 0.1882353, 0.31764707, 0.50980395, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_r2jwc"]
gradient = SubResource("Gradient_he1sj")

[node name="Start Screen" type="Node2D" unique_id=2096571283]
script = ExtResource("1_tx5wa")

[node name="Button Manager" type="Node" parent="." unique_id=1596647026]

[node name="Start" type="Button" parent="Button Manager" unique_id=963397099]
offset_left = 492.0
offset_top = 365.0
offset_right = 542.0
offset_bottom = 398.0
theme_override_fonts/font = ExtResource("2_he1sj")
text = "Start"

[node name="Exit" type="Button" parent="Button Manager" unique_id=336079495]
offset_left = 502.0
offset_top = 424.0
offset_right = 568.0
offset_bottom = 457.0
theme_override_fonts/font = ExtResource("2_he1sj")
text = "Exit"

[node name="CheckButton" type="CheckButton" parent="Button Manager" unique_id=1559647864]
offset_left = 924.0
offset_top = 585.0
offset_right = 1120.0
offset_bottom = 609.0
theme_override_fonts/font = ExtResource("3_r2jwc")
button_pressed = true
text = "Checkpoints"

[node name="Lvl1" type="Button" parent="Button Manager" unique_id=973706778]
offset_left = 1006.0
offset_top = 412.0
offset_right = 1090.0
offset_bottom = 445.0
theme_override_fonts/font = ExtResource("2_he1sj")
text = "LVL1"

[node name="Lvl2" type="Button" parent="Button Manager" unique_id=33319832]
offset_left = 1006.0
offset_top = 459.0
offset_right = 1090.0
offset_bottom = 492.0
theme_override_fonts/font = ExtResource("2_he1sj")
text = "LVL2"

[node name="Lvl3" type="Button" parent="Button Manager" unique_id=145472310]
offset_left = 1006.0
offset_top = 503.0
offset_right = 1090.0
offset_bottom = 536.0
theme_override_fonts/font = ExtResource("2_he1sj")
text = "LVL3"

[node name="Sprite2D2" type="Sprite2D" parent="." unique_id=1466148222]
position = Vector2(491.00003, 378.00003)
scale = Vector2(69.02344, 69.02344)
texture = SubResource("GradientTexture2D_r2jwc")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=885251440]
texture = ExtResource("2_o7i0r")
centered = false

[connection signal="pressed" from="Button Manager/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Button Manager/Exit" to="." method="_on_exit_pressed"]
[connection signal="toggled" from="Button Manager/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Button Manager/Lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="Button Manager/Lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="Button Manager/Lvl3" to="." method="_on_lvl_3_pressed"]
